# Motivational-quote-of-the-day-server

./: CMakeLists.txt  install.sh  main.c  mqotd.service  quotes.txt
